--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kshitija and Sanruddhi Arangetram Invitation</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,11 +16,11 @@
 </head>
 <body>
     <header class="text-center py-5">
-        <!-- <img  src="/static/Krishna.jpg" width="100" height="100" class="d-block mx-auto mb-3"> -->
-        <img id="logo" src="/static/dhyas logo5.jpg" class="d-block mx-auto mb-3" sizes="10%">
+        <!-- <img  src="Krishna.jpg" width="100" height="100" class="d-block mx-auto mb-3"> -->
+        <img id="logo" src="dhyas logo5.jpg" class="d-block mx-auto mb-3" sizes="10%">
         <h4 style="color: rgb(237, 237, 237); font-size: 24px; font-family: 'Georgia', cursive;">Presents</h4>
         <!-- <h1 class="display-4">ShyamRang</h1> -->
-        <img id="logo" src="/static/Shyamrang.jpg" class="d-block mx-auto mb-3" sizes="25%">
+        <img id="logo" src="Shyamrang.jpg" class="d-block mx-auto mb-3" sizes="25%">
         <h4 style="color: rgb(237, 237, 237); font-size: 24px; font-family: 'Georgia', cursive;"><strong>Bharatnatyam Arangetram</strong></h4>
         <h5>by</h5>
         <h3 style="color: rgb(255, 170, 0); font-size: 24px; font-family: 'Georgia', cursive;"><strong>Kshitija Shastri</strong></h3>
@@ -32,31 +32,31 @@
     <div id="slideshow-container1" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/static/1.jpg" class="d-block w-100 h-100" alt="Image 1">
+                <img src="1.jpg" class="d-block w-100 h-100" alt="Image 1">
             </div>
             <div class="carousel-item">
-                <img src="/static/6.jpg" class="d-block w-100 h-100" alt="Image 2">
+                <img src="6.jpg" class="d-block w-100 h-100" alt="Image 2">
             </div>
             <div class="carousel-item">
-                <img src="/static/4.jpg" class="d-block w-100 h-100" alt="Image 3">
+                <img src="4.jpg" class="d-block w-100 h-100" alt="Image 3">
             </div>
             <div class="carousel-item">
-                <img src="/static/8.jpg" class="d-block w-100 h-100" alt="Image 4">
+                <img src="8.jpg" class="d-block w-100 h-100" alt="Image 4">
             </div>
             <div class="carousel-item">
-                <img src="/static/2.jpg" class="d-block w-100 h-100" alt="Image 5">
+                <img src="2.jpg" class="d-block w-100 h-100" alt="Image 5">
             </div>
             <div class="carousel-item">
-                <img src="/static/3.jpg" class="d-block w-100 h-100" alt="Image 6">
+                <img src="3.jpg" class="d-block w-100 h-100" alt="Image 6">
             </div>
             <div class="carousel-item">
-                <img src="/static/5.jpg" class="d-block w-100 h-100" alt="Image 7">
+                <img src="5.jpg" class="d-block w-100 h-100" alt="Image 7">
             </div>
             <div class="carousel-item">
-                <img src="/static/7.jpg" class="d-block w-100 h-100" alt="Image 8">
+                <img src="7.jpg" class="d-block w-100 h-100" alt="Image 8">
             </div>
             <div class="carousel-item">
-                <img src="/static/9.jpg" class="d-block w-100 h-100" alt="Image 8">
+                <img src="9.jpg" class="d-block w-100 h-100" alt="Image 8">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container1" data-bs-slide="prev">
@@ -102,11 +102,11 @@
             </h3>
             
             <div class="collapse" id="GuruInfo">
-                <!-- <img src="/static/Ketki Tai.JPG" class="float-start me-3" width="15%"> -->
+                <!-- <img src="Ketki Tai.JPG" class="float-start me-3" width="15%"> -->
                 <div id="slideshow-container4" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/static/Ketki Tai.JPG" class="d-block w-100" alt="K1"     >
+                            <img src="Ketki Tai.JPG" class="d-block w-100" alt="K1"     >
                              <!-- Social Media Links -->
                              <div class="d-flex justify-content-evenly">
                                 <a href="https://youtube.com/@dhyasperformingarts9566?si=pMky26Ok_hhOh12v" class="fa fa-youtube-play"></a>
@@ -146,25 +146,25 @@
                             <div id="slideshow-container2" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="/static/k2.JPG" class="d-block w-100" alt="K1">
+                                        <img src="k2.JPG" class="d-block w-100" alt="K1">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k3.jpg" class="d-block w-100" alt="K2">
+                                        <img src="k3.jpg" class="d-block w-100" alt="K2">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k5.jpg" class="d-block w-100" alt="K3">
+                                        <img src="k5.jpg" class="d-block w-100" alt="K3">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k6.jpg" class="d-block w-100" alt="K4">
+                                        <img src="k6.jpg" class="d-block w-100" alt="K4">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k1.JPG" class="d-block w-100" alt="K5">
+                                        <img src="k1.JPG" class="d-block w-100" alt="K5">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k4.JPG" class="d-block w-100" alt="K6">
+                                        <img src="k4.JPG" class="d-block w-100" alt="K6">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/k7.jpg" class="d-block w-100" alt="K7">
+                                        <img src="k7.jpg" class="d-block w-100" alt="K7">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container2" data-bs-slide="prev">
@@ -241,25 +241,25 @@
                             <div id="slideshow-container3" class="carousel slide" data-bs-ride="carousel">
                                         <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="/static/s1.JPG" class="d-block w-100" alt="K1">
+                                        <img src="s1.JPG" class="d-block w-100" alt="K1">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s4.jpg" class="d-block w-100" alt="K2">
+                                        <img src="s4.jpg" class="d-block w-100" alt="K2">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s6.jpg" class="d-block w-100" alt="K3">
+                                        <img src="s6.jpg" class="d-block w-100" alt="K3">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s2.JPG" class="d-block w-100" alt="K4">
+                                        <img src="s2.JPG" class="d-block w-100" alt="K4">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s3.JPG" class="d-block w-100" alt="K5">
+                                        <img src="s3.JPG" class="d-block w-100" alt="K5">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s5.jpg" class="d-block w-100" alt="K6">
+                                        <img src="s5.jpg" class="d-block w-100" alt="K6">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/static/s7.jpg" class="d-block w-100" alt="K7">
+                                        <img src="s7.jpg" class="d-block w-100" alt="K7">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container3" data-bs-slide="prev">
@@ -434,87 +434,87 @@
                 <div id="slideshow-container5" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/static/N1.jpg" class="d-block w-100" alt="K1">
+                            <img src="N1.jpg" class="d-block w-100" alt="K1">
                             <figcaption style="text-align: center;"> Nrityajali 2019 </figcaption>
                             </div>
                         <div class="carousel-item">
-                            <img src="/static/N2.jpg" class="d-block w-100" alt="K2">
+                            <img src="N2.jpg" class="d-block w-100" alt="K2">
                             <figcaption style="text-align: center;"> Nrityajali 2019 </figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N3.jpg" class="d-block w-100" alt="K3">
+                            <img src="N3.jpg" class="d-block w-100" alt="K3">
                             <figcaption style="text-align: center;"> Nrityajali 2019 </figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N4.jpg" class="d-block w-100" alt="K4">
+                            <img src="N4.jpg" class="d-block w-100" alt="K4">
                             <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N5.jpg" class="d-block w-100" alt="K5">
+                            <img src="N5.jpg" class="d-block w-100" alt="K5">
                             <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N6.jpg" class="d-block w-100" alt="K6">
+                            <img src="N6.jpg" class="d-block w-100" alt="K6">
                             <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N7.jpg" class="d-block w-100" alt="K7">
+                            <img src="N7.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N8.jpg" class="d-block w-100" alt="K7">
+                            <img src="N8.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Ahmedabad 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N9.jpg" class="d-block w-100" alt="K7">
+                            <img src="N9.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Pratibhotsavam 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N10.jpg" class="d-block w-100" alt="K7">
+                            <img src="N10.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Pratibhotsavam 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N11.jpg" class="d-block w-100" alt="K7">
+                            <img src="N11.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Pratibhotsavam 2023</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N13.jpg" class="d-block w-100" alt="K7">
+                            <img src="N13.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Sashtra Sena</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N14.jpg" class="d-block w-100" alt="K7">
+                            <img src="N14.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N15.jpg" class="d-block w-100" alt="K7">
+                            <img src="N15.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N16.jpg" class="d-block w-100" alt="K7">
+                            <img src="N16.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N17.jpg" class="d-block w-100" alt="K7">
+                            <img src="N17.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N18.jpg" class="d-block w-100" alt="K7">
+                            <img src="N18.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Sri Lanka 2016</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N19.png" class="d-block w-100" alt="K7">
+                            <img src="N19.png" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Dubai 2017</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N20.jpg" class="d-block w-100" alt="K7">
+                            <img src="N20.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Dubai 2017</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N21.jpg" class="d-block w-100" alt="K7">
+                            <img src="N21.jpg" class="d-block w-100" alt="K7">
                             <figcaption style="text-align: center;"> Dubai 2017</figcaption>
                         </div>
                         <div class="carousel-item">
-                            <img src="/static/N22.jpg" class="d-block w-100" alt="K7">
+                            <img src="N22.jpg" class="d-block w-100" alt="K7">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#slideshow-container5" data-bs-slide="prev">
@@ -568,6 +568,6 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/static/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
